Moving the warehouse API to projectName/productType Signed-off-by: Laurent Broudoux <laurent.broudoux@gmail.com>
